--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   google_sign_in: ^4.5.9
   shared_preferences: ^0.5.12+4
   fluttertoast: ^7.1.6
-
+  image_picker: ^0.6.7+22
   # state management
   provider: ^4.3.2+2
 
@@ -41,7 +41,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  validators: ^2.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
