--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   shared_preferences: ^0.5.12+4
   fluttertoast: ^7.1.6
   image_picker: ^0.6.7+22
+  firebase_storage: ^7.0.0
+  permission_handler: ^5.1.0+2
+
+#  google_maps_flutter: ^1.2.0
   # state management
   provider: ^4.3.2+2
 
