--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_storage: ^7.0.0
   permission_handler: ^5.1.0+2
   mailer: 3.3.0
+  simple_animations: 2.5.1
+  get: ^3.26.0
 
 #  google_maps_flutter: ^1.2.0
   # state management
