--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   mailer: 3.3.0
   simple_animations: 2.5.1
   get: ^3.26.0
+  #stream_chat_flutter: ^0.2.20+3
 
 #  google_maps_flutter: ^1.2.0
   # state management
@@ -47,7 +48,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.0
   validators: ^2.0.1
 dev_dependencies:
   flutter_test:
